v4l2src: handle latency query before setting up the bufferpool

Fixes crash if no bufferpool is set up yet.

https://bugzilla.gnome.org/show_bug.cgi?id=684430